// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vlt-field has error "something is wrong" 1`] = `
<div
  class="Vlt-form__element--error Vlt-form__element"
>
  <!--v-if-->
  
  
  <small
    class="Vlt-form__element__error"
    id=""
  >
    something is wrong
  </small>
</div>
`;

exports[`vlt-field has label "Test field" 1`] = `
<div
  class="Vlt-form__element"
>
  <label
    class="Vlt-label"
  >
    Test field 
    <!--v-if-->
    <!--v-if-->
  </label>
  
  
  <!--v-if-->
</div>
`;

exports[`vlt-field has tooltip "Hello World" 1`] = `
<div
  class="Vlt-form__element"
>
  <label
    class="Vlt-label"
  >
    Test field 
    <!--v-if-->
    <span
      class="Vlt-tooltip"
    >
      
      <svg
        class="Vlt-icon Vlt-icon--small Vlt-blue"
      >
        <use
          xlink:href="#V_Vlt-icon-help-negative"
        />
      </svg>
      
    </span>
  </label>
  
  
  <!--v-if-->
</div>
`;

exports[`vlt-field is big 1`] = `
<div
  class="Vlt-form__element--big Vlt-form__element"
>
  <!--v-if-->
  
  
  <!--v-if-->
</div>
`;

exports[`vlt-field is big with label "Test field" 1`] = `
<div
  class="Vlt-form__element--big Vlt-form__element"
>
  <!--v-if-->
  
  
  <!--v-if-->
</div>
`;

exports[`vlt-field is optional 1`] = `
<div
  class="Vlt-form__element"
>
  <!--v-if-->
  
  
  <!--v-if-->
</div>
`;

exports[`vlt-field renders correctly 1`] = `
<div
  class="Vlt-form__element"
>
  <!--v-if-->
  
  
  <!--v-if-->
</div>
`;
